--- a/frontend/tests/unit/lexer/CMakeLists.txt
+++ b/frontend/tests/unit/lexer/CMakeLists.txt
@@ -23,7 +23,7 @@ target_link_libraries(lexer
         GTest::gtest
         GTest::gtest_main
         Threads::Threads
-        ${FLEX_LIBRARIES}
+        #${FLEX_LIBRARIES}
 )
 
 gtest_discover_tests(lexer
