[Cmake, driver,cpp] add target for compiling graph dump

--- a/frontend/CMakeLists.txt
+++ b/frontend/CMakeLists.txt
@@ -46,6 +46,11 @@ add_executable(frontend
     ${FLEX_Lexer_OUTPUTS}
     ${BISON_Parser_OUTPUTS}
 )
+option(GRAPH_DUMP "Enable Graphviz dump" OFF)
+
+if (GRAPH_DUMP)
+    target_compile_definitions(frontend PRIVATE GRAPH_DUMP)
+endif()
 
 target_include_directories(frontend PRIVATE
     ${CMAKE_CURRENT_SOURCE_DIR}/include
