[graph_dump] move files for graph dump to spacial dir

--- a/frontend/CMakeLists.txt
+++ b/frontend/CMakeLists.txt
@@ -56,6 +56,7 @@ endif()
 
 target_include_directories(frontend PRIVATE
     ${CMAKE_CURRENT_SOURCE_DIR}/include
+    ${CMAKE_CURRENT_SOURCE_DIR}/include/graph_dump
     ${CMAKE_CURRENT_BINARY_DIR}
 )
 
